# ChangeLog for kde-base/kuiviewer
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.75 2008/05/18 18:33:40 maekke Exp $

  18 May 2008; Markus Meier <maekke@gentoo.org> kuiviewer-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

*kuiviewer-4.0.4 (15 May 2008)

  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +kuiviewer-4.0.4.ebuild:
  Added KDE 4.0.4 version of kuiviewer. Thanks to Jorge Manuel B. S.
  Vicetto.

  15 May 2008; Markus Rothe <corsair@gentoo.org> kuiviewer-3.5.9.ebuild:
  Stable on ppc64; bug #221063

*kuiviewer-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kuiviewer-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  21 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kuiviewer-4.0.1.ebuild:
  Old.

*kuiviewer-4.0.2 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kuiviewer-4.0.2.ebuild:
  Version bump to KDE 4.0.2

*kuiviewer-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kuiviewer-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  16 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kuiviewer-3.5.5.ebuild,
  -kuiviewer-3.5.6.ebuild, -kuiviewer-3.5.7.ebuild, -kuiviewer-4.0.0.ebuild:
  Spring cleaning

  09 Feb 2008; Raúl Porcel <armin76@gentoo.org> kuiviewer-3.5.8.ebuild:
  alpha/ia64/sparc stable wrt #208366

*kuiviewer-4.0.1 (06 Feb 2008)

  06 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kuiviewer-4.0.1.ebuild:
  Version bump to KDE 4.0.1.

  31 Jan 2008; Brent Baude <ranger@gentoo.org> kuiviewer-3.5.8.ebuild:
  Marking kuiviewer-3.5.8 ppc for bug 207634

  30 Jan 2008; Brent Baude <ranger@gentoo.org> kuiviewer-3.5.8.ebuild:
  Marking kuiviewer-3.5.8 ppc64 for bug 207634

  30 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  kuiviewer-3.5.8.ebuild:
  stable x86, bug 207634