@@ -1,0 +1,12 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kuiviewer/kuiviewer-4.0.5.ebuild,v 1.1 2008/06/05 22:31:01 keytoaster Exp $
+
+EAPI="1"
+
+KMNAME=kdesdk
+inherit kde4-meta
+
+DESCRIPTION="KUIViewer - Displays Designer's UI files"
+KEYWORDS="~amd64 ~x86"
+IUSE="debug"
