@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kuiviewer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.75 2008/05/18 18:33:40 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.76 2008/06/05 22:31:01 keytoaster Exp $
+
+*kuiviewer-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kuiviewer-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kuiviewer.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kuiviewer-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
